--- a/cake.html
+++ b/cake.html
@@ -5,11 +5,14 @@
 	<title>Cake</title>
 	<script>
 		var answer = prompt("Do you want cake?");
-		if (answer == "yes"){
+		if (answer == "yes") {
 			console.log("Have some cake.");
 		}
-		else {
+		else if(answer == "no") {
 			console.log("No cake for you!");
+		}
+		else {
+			console.log("I don't understand.");
 		}
 	</script>
 </head>
