--- a/cake.html
+++ b/cake.html
@@ -11,6 +11,9 @@
 		else if(answer == "no") {
 			console.log("No cake for you!");
 		}
+		else if(answer == "maybe"){
+			console.log("How about another time?");
+		}
 		else {
 			console.log("I don't understand.");
 		}
